# imnodes-state

./: .clang-format  CMakeLists.txt  README.md
cmake/: CMakeLists.txt  FetchCatch2.cmake  FetchGlad.cmake  FetchGlfw.cmake  FetchImgui.cmake  FetchImnodes.cmake  FetchPugixml.cmake
source/: CMakeLists.txt  main.cpp
source/Node/: CMakeLists.txt  Node.cpp  Node.hpp  NodeEditor.cpp  NodeEditor.hpp  NodeIO.hpp  NodeLayer.cpp  NodeLayer.hpp  NodeManager.cpp  NodeManager.hpp  NodeTypes.hpp
source/Simulation/: CMakeLists.txt  Object.cpp  Object.hpp  ObjectLink.cpp  ObjectLink.hpp  ObjectNode.cpp  ObjectNode.hpp  ObjectPin.cpp  ObjectPin.hpp  Simulation.cpp  Simulation.hpp  SimulationEditor.cpp  SimulationEditor.hpp
source/Window/: CMakeLists.txt  FileMenu.cpp  FileMenu.hpp  Layer.hpp  MenuBar.cpp  MenuBar.hpp  Window.cpp  Window.hpp
